--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 permalink: /
 image: /img/nfn-preview.png
+description: "NFN is a Nice Fake News site created by a Russian hacking group. We share only the most heart-warming and inspiring lies. And seed them by whatever means necessary…"
 ---
 
 {% include project-list.html limit="9" %}
@@ -15,4 +16,4 @@ window.onload = function () {
     }
 }
 
-</script> 
+</script>
